--- a/static/global.css
+++ b/static/global.css
@@ -1,3 +1,8 @@
+body {
+    marin: 0;
+    padding: 0;
+}
+
 .striped table {
     border-collapse: collapse;
     width: 100%;
@@ -19,5 +24,17 @@
 .striped td.nocontent {
     color: #999;
     text-align: center;
+}
+
+.today {
+    background-color: #ffff99;
+}
+
+.overdue {
+    background-color: #ff9999;
+}
+
+.done {
+    background-color: #ccff99;
 }
 
