--- a/static/global.css
+++ b/static/global.css
@@ -26,6 +26,7 @@ body {
     --fg-2: #455d7a;
     --fg-3: #c7c7c7;
     --fg-acc: #f95959;
+    --fg-danger: red;
 
     --border: #ccc;
 
@@ -55,7 +56,7 @@ h1:nth-child(1) {
 button {
     cursor: pointer;
     padding: var(--gap-tiny);
-    padding: 0.5em 1em;
+    padding: var(--gap-tiny) var(--gap-small);
     border-radius: 0.5em;
     border: none;
 }
@@ -66,10 +67,6 @@ button.primary {
     border: 1px solid var(--fg-1);
 }
 
-button.primary:active {
-    background-color: var(--bg-1);
-}
-
 button.primary:disabled {
     background-color: var(--bg-2);
     color: var(--fg-2);
@@ -78,10 +75,15 @@ button.primary:disabled {
 button.secondary {
     background-color: var(--bg-2);
     color: var(--fg-1);
-    border: 1px solid var(--border);
+    border: 1px solid var(--bg-2);
 }
 
-button.secondary:active {
-    background-color: var(--bg-2);
+button.danger {
+    background-color: var(--fg-danger);
+    color: var(--bg-1);
+}
+
+button.danger:disabled {
+    background-color: var(--bg-danger);
 }
 
