--- a/static/global.css
+++ b/static/global.css
@@ -26,7 +26,7 @@ body {
     --fg-2: #455d7a;
     --fg-3: #c7c7c7;
     --fg-acc: #f95959;
-    --fg-danger: red;
+    --fg-danger: #ff6358;
 
     --border: #ccc;
 
